Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-2351

[C++] StringBuilder::append(vector<string>...) not implemented

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.9.0
    • 0.10.0
    • C++

    Description

      For StringBuilder an append(vector<string>, uint8_t*) function is declared and documented but it does not seem to be implemented.

      undefined reference to `arrow::StringBuilder::Append(std::vector<std::string, std::allocator<std::string> > const&, unsigned char*)'
      collect2: error: ld returned 1 exit status
      

      Also worth noting is that the similar function in NumericBuilder uses vector<bool> for the null values instead of uint8_t*. It might be worth making them consistent.

       

      Attachments

        Activity

          People

            gaolizhou Dou Tu
            rvernica Rares Vernica
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: