ARROW-2351 [C++] StringBuilder::append(vector<string>...) not implemented