cpp/src/arrow/builder.cc
@@ -1385,6 +1385,30 @@ const uint8_t* BinaryBuilder::GetValue(int64_t i, int32_t* out_length) const {
 
 StringBuilder::StringBuilder(MemoryPool* pool) : BinaryBuilder(utf8(), pool) {}
 
+Status StringBuilder::Append(const std::vector<std::string>& values) {
+  std::size_t total_length = std::accumulate(values.begin(), values.end(),
+                                          0ULL, [](uint64_t sum, const std::string &str){
+        return sum + str.size();
+      });
+  RETURN_NOT_OK(Reserve(values.size()));
+  RETURN_NOT_OK(value_data_builder_.Reserve(total_length));
+  RETURN_NOT_OK(offsets_builder_.Reserve(values.size()));
+
+  std::for_each(values.begin(), values.end(),
+                [this](const std::string &str) {
+                  this->AppendNextOffset();
+                  if (str.empty()) {
+                    this->UnsafeAppendToBitmap(false);
+                  } else {
+                    this->value_data_builder_.Append(
+                        reinterpret_cast<const uint8_t*>(str.data()), str.size());
+                    this->UnsafeAppendToBitmap(true);
+                  }
+
+                });
+  return Status::OK();
+}
+
 // ----------------------------------------------------------------------
 // Fixed width binary
 
